--- a/src/app/modules/clientes/pages/crear-historial-clinico/crear-historial-clinico.html
+++ b/src/app/modules/clientes/pages/crear-historial-clinico/crear-historial-clinico.html
@@ -15,43 +15,28 @@
 
             <div class="cliente-grid">
                 <div class="input-group">
-                    <label>Nombres *</label>
+                    <label>Nombres</label>
                     <input type="text" formControlName="nombres" placeholder="Ej: Juan Carlos" appEnterNext>
-                    <span class="error-msg" *ngIf="esInvalidoCliente('nombres')">
-            {{ getMensajeErrorCliente('nombres') }}
-          </span>
                 </div>
 
                 <div class="input-group">
-                    <label>Apellidos *</label>
+                    <label>Apellidos</label>
                     <input type="text" formControlName="apellidos" placeholder="Ej: Pérez García" appEnterNext>
-                    <span class="error-msg" *ngIf="esInvalidoCliente('apellidos')">
-            {{ getMensajeErrorCliente('apellidos') }}
-          </span>
                 </div>
 
                 <div class="input-group">
-                    <label>Cédula *</label>
-                    <input type="text" formControlName="cedula" placeholder="1234567890" maxlength="10" appEnterNext>
-                    <span class="error-msg" *ngIf="esInvalidoCliente('cedula')">
-            {{ getMensajeErrorCliente('cedula') }}
-          </span>
+                    <label>Cédula</label>
+                    <input type="text" formControlName="cedula" placeholder="1234567890" appEnterNext>
                 </div>
 
                 <div class="input-group">
-                    <label>Teléfono *</label>
-                    <input type="text" formControlName="telefono" placeholder="0987654321" maxlength="10" appEnterNext>
-                    <span class="error-msg" *ngIf="esInvalidoCliente('telefono')">
-            {{ getMensajeErrorCliente('telefono') }}
-          </span>
+                    <label>Teléfono</label>
+                    <input type="text" formControlName="telefono" placeholder="0987654321" appEnterNext>
                 </div>
 
                 <div class="input-group">
                     <label>Email</label>
-                    <input type="email" formControlName="email" placeholder="ejemplo@correo.com" appEnterNext>
-                    <span class="error-msg" *ngIf="esInvalidoCliente('email')">
-            {{ getMensajeErrorCliente('email') }}
-          </span>
+                    <input type="text" formControlName="email" placeholder="ejemplo@correo.com" appEnterNext>
                 </div>
 
                 <div class="input-group">
@@ -61,10 +46,7 @@
 
                 <div class="input-group">
                     <label>Provincia</label>
-                    <select formControlName="provincia" appEnterNext>
-            <option value="">Seleccione una provincia</option>
-            <option *ngFor="let prov of provinciasEcuador" [value]="prov">{{ prov }}</option>
-          </select>
+                    <input type="text" formControlName="provincia" placeholder="Ej: Pichincha" appEnterNext>
                 </div>
 
                 <div class="input-group">
@@ -96,15 +78,15 @@
                     <div class="ojo-inputs">
                         <div class="input-group">
                             <label>Esfera</label>
-                            <input type="number" step="0.25" formControlName="odEsfera" appEnterNext>
+                            <input type="text" formControlName="odEsfera" appEnterNext>
                         </div>
                         <div class="input-group">
                             <label>Cilindro</label>
-                            <input type="number" step="0.25" formControlName="odCilindro" appEnterNext>
+                            <input type="text" formControlName="odCilindro" appEnterNext>
                         </div>
                         <div class="input-group">
                             <label>Eje</label>
-                            <input type="number" step="1" min="0" max="180" formControlName="odEje" appEnterNext>
+                            <input type="text" formControlName="odEje" appEnterNext>
                         </div>
                         <div class="input-group">
                             <label>AVSC</label>
@@ -123,15 +105,15 @@
                     <div class="ojo-inputs">
                         <div class="input-group">
                             <label>Esfera</label>
-                            <input type="number" step="0.25" formControlName="oiEsfera" appEnterNext>
+                            <input type="text" formControlName="oiEsfera" appEnterNext>
                         </div>
                         <div class="input-group">
                             <label>Cilindro</label>
-                            <input type="number" step="0.25" formControlName="oiCilindro" appEnterNext>
+                            <input type="text" formControlName="oiCilindro" appEnterNext>
                         </div>
                         <div class="input-group">
                             <label>Eje</label>
-                            <input type="number" step="1" min="0" max="180" formControlName="oiEje" appEnterNext>
+                            <input type="text" formControlName="oiEje" appEnterNext>
                         </div>
                         <div class="input-group">
                             <label>AVSC</label>
@@ -148,24 +130,15 @@
             <div class="section-medidas">
                 <div class="input-group">
                     <label>ADD</label>
-                    <input type="number" step="0.25" formControlName="add" placeholder="2.00" appEnterNext>
-                    <span class="error-msg" *ngIf="esInvalido('add')">
-                        {{ getMensajeError('add') }}
-                    </span>
+                    <input type="text" formControlName="add" placeholder="2.00" appEnterNext>
                 </div>
                 <div class="input-group">
                     <label>DP</label>
-                    <input type="number" step="0.5" formControlName="dp" placeholder="62" appEnterNext>
-                    <span class="error-msg" *ngIf="esInvalido('dp')">
-                        {{ getMensajeError('dp') }}
-                    </span>
+                    <input type="text" formControlName="dp" placeholder="62" appEnterNext>
                 </div>
                 <div class="input-group">
                     <label>Altura</label>
-                    <input type="number" step="0.1" formControlName="altura" placeholder="18.5" appEnterNext>
-                    <span class="error-msg" *ngIf="esInvalido('altura')">
-                        {{ getMensajeError('altura') }}
-                    </span>
+                    <input type="text" formControlName="altura" placeholder="18.5" appEnterNext>
                 </div>
             </div>
 
@@ -177,65 +150,36 @@
 
             <div class="armazon-grid">
                 <div class="input-group">
-                    <label>H (Ancho del Aro) *</label>
-                    <input type="number" step="0.1" formControlName="armazonH" placeholder="52" appEnterNext>
-                    <span class="error-msg" *ngIf="esInvalido('armazonH')">
-                        {{ getMensajeError('armazonH') }}
-                    </span>
+                    <label>H (Ancho del Aro)</label>
+                    <input type="text" formControlName="armazonH" placeholder="52" appEnterNext>
                 </div>
                 <div class="input-group">
-                    <label>V (Alto del Aro) *</label>
-                    <input type="number" step="0.1" formControlName="armazonV" placeholder="40" appEnterNext>
-                    <span class="error-msg" *ngIf="esInvalido('armazonV')">
-                        {{ getMensajeError('armazonV') }}
-                    </span>
+                    <label>V (Alto del Aro)</label>
+                    <input type="text" formControlName="armazonV" placeholder="40" appEnterNext>
                 </div>
                 <div class="input-group">
-                    <label>DM (Diagonal Mayor) *</label>
-                    <input type="number" step="0.1" formControlName="armazonDM" placeholder="60" appEnterNext>
-                    <span class="error-msg" *ngIf="esInvalido('armazonDM')">
-                        {{ getMensajeError('armazonDM') }}
-                    </span>
+                    <label>DM (Diagonal Mayor)</label>
+                    <input type="text" formControlName="armazonDM" placeholder="60" appEnterNext>
                 </div>
                 <div class="input-group">
-                    <label>P (Puente) *</label>
-                    <input type="number" step="0.1" formControlName="armazonP" placeholder="18" appEnterNext>
-                    <span class="error-msg" *ngIf="esInvalido('armazonP')">
-                        {{ getMensajeError('armazonP') }}
-                    </span>
+                    <label>P (Puente)</label>
+                    <input type="text" formControlName="armazonP" placeholder="18" appEnterNext>
                 </div>
                 <div class="input-group">
-                    <label>Tipo de Armazón *</label>
-                    <select formControlName="armazonTipo" appEnterNext>
-                        <option value="">Seleccione tipo</option>
-                        <option value="Completo">Completo</option>
-                        <option value="Ranurado">Ranurado</option>
-                        <option value="Al Aire">Al Aire</option>
-                    </select>
-                    <span class="error-msg" *ngIf="esInvalido('armazonTipo')">
-                        {{ getMensajeError('armazonTipo') }}
-                    </span>
+                    <label>Tipo de Armazón</label>
+                    <input type="text" formControlName="armazonTipo" placeholder="Completo / Ranurado / Otro" appEnterNext>
                 </div>
                 <div class="input-group">
-                    <label>DNP OD (Derecha) *</label>
-                    <input type="number" step="0.5" formControlName="armazonDNP_OD" placeholder="31" appEnterNext>
-                    <span class="error-msg" *ngIf="esInvalido('armazonDNP_OD')">
-                        {{ getMensajeError('armazonDNP_OD') }}
-                    </span>
+                    <label>DNP OD (Derecha)</label>
+                    <input type="text" formControlName="armazonDNP_OD" appEnterNext>
                 </div>
                 <div class="input-group">
-                    <label>DNP OI (Izquierda) *</label>
-                    <input type="number" step="0.5" formControlName="armazonDNP_OI" placeholder="31" appEnterNext>
-                    <span class="error-msg" *ngIf="esInvalido('armazonDNP_OI')">
-                        {{ getMensajeError('armazonDNP_OI') }}
-                    </span>
+                    <label>DNP OI (Izquierda)</label>
+                    <input type="text" formControlName="armazonDNP_OI" appEnterNext>
                 </div>
                 <div class="input-group">
-                    <label>Altura (Alt) *</label>
-                    <input type="number" step="0.1" formControlName="armazonAltura" placeholder="20" appEnterNext>
-                    <span class="error-msg" *ngIf="esInvalido('armazonAltura')">
-                        {{ getMensajeError('armazonAltura') }}
-                    </span>
+                    <label>Altura (Alt)</label>
+                    <input type="text" formControlName="armazonAltura" appEnterNext>
                 </div>
             </div>
 
@@ -243,18 +187,12 @@
             <!-- EXTRA -->
             <div class="section-extra">
                 <div class="input-group">
-                    <label>De *</label>
+                    <label>De</label>
                     <input type="text" formControlName="de" placeholder="Cerca / Lejos / DP" appEnterNext>
-                    <span class="error-msg" *ngIf="esInvalido('de')">
-                        {{ getMensajeError('de') }}
-                    </span>
                 </div>
                 <div class="input-group">
-                    <label>Color *</label>
+                    <label>Color</label>
                     <input type="text" formControlName="color" placeholder="Negro / Transparente" appEnterNext>
-                    <span class="error-msg" *ngIf="esInvalido('color')">
-                        {{ getMensajeError('color') }}
-                    </span>
                 </div>
             </div>
 
@@ -262,21 +200,15 @@
             <div class="section-observacion">
                 <label>Observación</label>
                 <textarea rows="3" formControlName="observacion" placeholder="Notas adicionales..." appEnterNext></textarea>
-                <span class="error-msg" *ngIf="esInvalido('observacion')">
-                    {{ getMensajeError('observacion') }}
-                </span>
             </div>
             <div class="section-title">
-                <h4>Doctor que atendió *</h4>
+                <h4>Doctor que atendió</h4>
             </div>
 
             <div class="cliente-grid">
                 <div class="input-group full-width">
-                    <label>DR. *</label>
+                    <label>DR.</label>
                     <input type="text" formControlName="doctor" placeholder="Ej: Dr. Juan Pérez" appEnterNext />
-                    <span class="error-msg" *ngIf="esInvalido('doctor')">
-                        {{ getMensajeError('doctor') }}
-                    </span>
                 </div>
             </div>
 
